[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gameplay/UI/CastBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Gameplay/World/World.gd" type="Script" id=2]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1024, 0, 1024, 600, 0, 600, 0, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 0, 600, 1024, 600, 1024, 0 ) ]

[node name="World" type="Node"]
script = ExtResource( 2 )

[node name="Players" type="Node" parent="."]

[node name="PathDebug" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="LagSimTimer" type="Timer" parent="."]

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NetworkInfo" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 20.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NetworkInfo"]
margin_right = 200.0
margin_bottom = 44.0

[node name="Ping" type="Label" parent="CanvasLayer/NetworkInfo/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Ping: 0ms"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LagSimWarning" type="Label" parent="CanvasLayer/NetworkInfo/VBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
text = "SIMULATING LAG"
align = 1
valign = 1

[node name="CastBar" parent="CanvasLayer" instance=ExtResource( 1 )]

[connection signal="timeout" from="LagSimTimer" to="." method="_on_LagSimTimer_timeout"]
